<resources>
    <string name="app_name">Expense Manager</string>

    <string name="action_settings">Settings</string>

    <string name="prompt_passCode">Enter PassCode</string>
    <string name="action_enter">Enter</string>
    <string name="action_enter_short">Enter PassCode</string>
    <string name="action_compute">Compute</string>

    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_cc_manager">Credit Card Manager</string>

    <string name="cancel">Cancel</string>
    <string name="date_format">MMMM dd, yyyy</string>

    <!--Credit Card Manager-->
    <string name="prompt_cc_tranDate">Transaction Date</string>
    <string name="prompt_cc_tranType">Transaction Type</string>
    <string name="prompt_cc_tranDescription">Description</string>
    <string name="prompt_cc_tranAmount">Amount</string>
    <string name="prompt_cc_principal_amount">Principal Amount</string>
    <string name="prompt_cc_monthly_amortization">Monthly Amortization</string>
    <string name="prompt_cc_months_to_pay">Months To Pay</string>
    <string name="prompt_cc_until">Until</string>
    <string name="prompt_cc_payment_type">Payment Type</string>
    <string name="prompt_cc_include">Include?</string>
    <string name="btn_cc_add">Add</string>
    <string name="title_add_transaction">Add Transaction</string>

    <string-array name="arr_cc_transaction">
        <item>CREDIT</item>
        <item>INSTALLMENT</item>
        <item>CHARGE</item>
        <item>PAYMENT</item>
    </string-array>

    <string-array name="arr_cc_payment">
        <item>CBC_Internet_Payment</item>
        <item>SM_Bills_Payment</item>
        <item>ChinaBank</item>
        <item>Others</item>
    </string-array>

    <string-array name="arr_cc_desc">
        <item>Grocery - Eton</item>
        <item>Grocery - Ever</item>
        <item>Mercury Drug - Trinoma</item>
        <item>Mercury Drug - Ayala</item>
        <item>Mercury Drug - G4</item>
    </string-array>

    <!-- http://www.mysamplecode.com/2012/07/android-listview-checkbox-example.html -->
    <!--http://stackoverflow.com/questions/31052436/android-edittext-with-drop-down-list-->
    <!--http://www.sourcecodester.com/android/9474/dynamic-table-w-pagination.html-->

</resources>
